# ToyInfer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  experiment_ncu.sh  experiment_nsys.sh  experiment_time.sh  export.py  main.cpp  main.cu  run.sh  test.txt
include/: banner.h  config.h  cuda_utils.h  engine.h  kernel_warpper.h  logger.h  options.h  profiling.h  qwen3.h  sampler.h  tokenizer.h  transformer.h  type.h
src/: banner.cpp  config.cpp  decode.cu  engine.cpp  engine_runtime.cpp  kernel.cu  kernel_common.cuh  logger.cpp  options.cpp  prefill.cu  qwen.cpp  sampler.cpp  tokenizer.cpp  transformer.cpp
tests/: add_test_common.h  attention_test_common.h  flash_attention_test_common.h  gemv_test_common.h  multi_rmsnorm_test_common.h  precompute_freq_test_common.h  rmsnorm_test_common.h  rope_test_common.h  swiglu_test_common.h  test_add_bf16_kernel.cu  test_add_kernel.cu  test_apply_score2v_f32_kernel.cu  test_attention.cu  test_attention_bf16.cu  test_attn_single_proj.cu  test_batch_gemv_proj_bf16.cu  test_batch_multi_rmsnorm_bf16.cu  test_batch_residual_add_bf16.cu  test_batch_rmsnorm_bf16.cu  test_batch_swiglu_bf16x2.cu  test_convert_float22bfloat162.cu  test_cuda_graph_pos.cu  test_flash_attention_v1_bf16.cu  test_gemv_bf162float_kernel.cu  test_gemv_bf16_kernel.cu  test_gemv_proj_bf16.cu  test_gemv_proj_bf162float.cu  test_gqa_qk_gemv_bf16_kernel.cu  test_helpers.h  test_multi_rmsnorm.cu  test_multi_rmsnorm_bf16.cu  test_multi_rmsnorm_bf16x2_kernel.cu  test_precompute_freq.cu  test_precompute_freq_f32.cu  test_precompute_freq_kernel.cu  test_reduce_sum_bf16x2_kernel.cu  test_residual_add_bf16.cu  test_rmsnorm.cu  test_rmsnorm_bf16.cu  test_rmsnorm_bf16x2_kernel.cu  (+8 more)
